some minor changes

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -67,16 +67,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest Classifier Accuracy: 0.6849951079030442\n",
-      "Random Forest Classifier Accuracy: 0.7418009039286129\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy import ravel\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -85,10 +76,10 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    x, y, test_size=0.25, random_state=42, shuffle=True)\n",
-    "#tweak these variables to get a better model. Good luck!\n",
-    "#you can also look up GridSearchCV to automate this process, ask ChatGPT\n",
-    "rf = RandomForestClassifier(class_weight='balanced', random_state=42, n_estimators=12,\n",
-    "                            max_depth=7, min_samples_leaf=0.05,max_features=0.65)\n",
+    "# tweak these variables to get a better model. Good luck!\n",
+    "# you can also look up GridSearchCV to automate this process, ask ChatGPT\n",
+    "rf = RandomForestClassifier(class_weight='balanced', random_state=42, n_estimators=100,\n",
+    "                            min_samples_leaf=0.051, max_features=0.76)\n",
     "rf.fit(X_train, ravel(y_train))\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
@@ -99,15 +90,31 @@
     "fpr, tpr, thresholds = roc_curve(y_test, y_probs)\n",
     "rf_auc = auc(fpr, tpr)  # Compute AUC Score\n",
     "\n",
-    "print(f'Random Forest Classifier Accuracy: {rf_auc}') #should be 0.685, try for 0.7\n",
-    "print(f'Random Forest Classifier Accuracy: {accuracy_score(y_test, y_pred)}') #not so important here, but its 0.742"
+    "# should be 0.685, try for 0.7\n",
+    "print(f'Random Forest Classifier Accuracy: {rf_auc}')\n",
+    "# not so important here, but its 0.742\n",
+    "print(f'Random Forest Classifier Accuracy: {accuracy_score(y_test, y_pred)}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should try to make something like the sample submission file, using our model. But you can do that, hmm?"
+    "You should also use precision recall to evaluate the model, since the classes are imbalanced. (there are hardly any NOK parts). That's why we set the class_weights to balanced. This will make the model pay more attention to the NOK parts.\n",
+    "\n",
+    "## Discussion about the Data\n",
+    "The company makes automotive parts and after fabrication, some readings are taken from each part. Those are the columns in the input data, aside from PROC_ID which is the unique ID for each part. At the end of this process, the part is classified as either \"OK\" or \"NOK\".\n",
+    "\n",
+    "We want to build a model that can predict this classification based on the readings taken from the part without needing that final inspection.\n",
+    "\n",
+    "Since we used a Random Forest Classifier, we can also see which features are the most important for the model. This can give us some insights into what makes a part NOK. We can use this information to improve the fabrication process and reduce the number of NOK parts. (I have no idea how this would be done, don't ask me).\n",
+    "\n",
+    "## Ways to imporve accuracy and efficiency\n",
+    "- We could try other models like XGBoost or LightGBM\n",
+    "- We could try to balance the classes in the data\n",
+    "- We could try to use some feature engineering to create new features (I was thinking about extracting dates from the PROC_ID, but I don't know if that would be useful)\n",
+    "- We could try to use some feature selection to remove unimportant features (I don't think this is necessary since the model is already fast)\n",
+    "- We could try to use some hyperparameter tuning to improve the model (we *should* do this, but I'm lazy)\n"
    ]
   }
  ],
